[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = {version = "0.7.4", features = ["macros"]}
axum-auth = { version = "0.7.0", default-features= false, features = ["auth-bearer"] }
serde = {version = "1.0.199", features = ["derive"]}
serde_json = "1.0.116"
tokio = { version = "1.36.0", features = ["macros", "rt","rt-multi-thread", "signal"] }
tower-http = { version = "0.5.2", features = ["cors"] }
parking_lot = "0.12"
